@@ -1,3 +1,8 @@
+2004-09-04  Davyd Madeley  <davyd@madeley.id.au>
+
+	* battstat_applet.c: Fix a build problem for BSD. Closes #151824.
+	Patch from Julio M. Merino Vidal <jmmv@menta.net>.
+
 2004-08-30  Davyd Madeley  <davyd@madeley.id.au>
 
 	* battstat_applet.c: Fix a crasher with battery notifications. Closes
